--- a/index.html
+++ b/index.html
@@ -239,7 +239,37 @@
                     </form>
                 </div>
                 <div class="contact-info">
-                    <!-- Contact information will be added here -->
+                    <div class="info-card">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <h3>Location</h3>
+                        <p>Macedonia<br>Visit us in Debar</p>
+                    </div>
+                    <div class="info-card">
+                        <i class="fas fa-clock"></i>
+                        <h3>Working Hours</h3>
+                        <p>Contact us for<br>current availability</p>
+                    </div>
+                    <div class="info-card">
+                        <i class="fas fa-phone"></i>
+                        <h3>Contact</h3>
+                        <p>Phone: +38976276666</p>
+                    </div>
+                    <div class="info-card">
+                        <i class="fas fa-comments"></i>
+                        <h3>Social Media</h3>
+                        <p>TikTok: @crazy_garage_en</p>
+                    </div>
+                    <div class="map-container">
+                        <iframe 
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2987.7041858493247!2d20.523869776029928!3d41.52236097162282!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x135111bf674dc7b7%3A0x494d6ce192f60c68!2sCrazy%20garage%20EN!5e0!3m2!1sen!2sus!4v1710351245140!5m2!1sen!2sus"
+                            width="100%" 
+                            height="450" 
+                            style="border:0;" 
+                            allowfullscreen="" 
+                            loading="lazy" 
+                            referrerpolicy="no-referrer-when-downgrade">
+                        </iframe>
+                    </div>
                 </div>
             </div>
         </div>
@@ -262,9 +292,7 @@
                 <div class="footer-section">
                     <h3>Connect With Us</h3>
                     <div class="social-links">
-                        <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-                        <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
-                        <a href="#" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                        <a href="https://www.tiktok.com/@crazy_garage_en" target="_blank"><i class="fab fa-tiktok"></i></a>
                     </div>
                 </div>
             </div>
