feat: Add interior door panel before/after photos to gallery

--- a/index.html
+++ b/index.html
@@ -255,38 +255,18 @@
                 <div class="gallery-item" data-category="interior">
                     <div class="before-after-slider">
                         <div class="before-image">
-                            <svg class="placeholder-image" viewBox="0 0 800 600" xmlns="http://www.w3.org/2000/svg">
-                                <rect width="100%" height="100%" fill="#2d2d2d"/>
-                                <path d="M200,150 h400 v300 h-400 Z" fill="#c0c0c0" opacity="0.5"/>
-                                <path d="M250,200 h300 v200 h-300 Z" fill="#c0c0c0" opacity="0.3"/>
-                                <text x="50%" y="45%" text-anchor="middle" fill="#fff" font-family="Arial" font-size="24">
-                                    Worn Interior
-                                </text>
-                                <text x="50%" y="55%" text-anchor="middle" fill="#fff" font-family="Arial" font-size="18">
-                                    Before Detailing
-                                </text>
-                            </svg>
+                            <img src="assets/gallery/interior/left-side-door-before.JPG" alt="Car Interior Before Detailing">
                             <span class="label" data-i18n="gallery.labels.before">Before</span>
                         </div>
                         <div class="after-image">
-                            <svg class="placeholder-image" viewBox="0 0 800 600" xmlns="http://www.w3.org/2000/svg">
-                                <rect width="100%" height="100%" fill="#1a1a1a"/>
-                                <path d="M200,150 h400 v300 h-400 Z" fill="#e8e8e8"/>
-                                <path d="M250,200 h300 v200 h-300 Z" fill="#e8e8e8" opacity="0.8"/>
-                                <text x="50%" y="45%" text-anchor="middle" fill="#fff" font-family="Arial" font-size="24">
-                                    Restored Interior
-                                </text>
-                                <text x="50%" y="55%" text-anchor="middle" fill="#fff" font-family="Arial" font-size="18">
-                                    After Detailing
-                                </text>
-                            </svg>
+                            <img src="assets/gallery/interior/left-side-door-after.JPG" alt="Car Interior After Detailing">
                             <span class="label" data-i18n="gallery.labels.after">After</span>
                         </div>
                         <div class="slider-handle"></div>
                     </div>
                     <div class="gallery-item-info">
-                        <h4 data-i18n="gallery.items.audi.title">Audi Interior Detailing</h4>
-                        <p data-i18n="gallery.items.audi.description">Deep cleaning and leather restoration</p>
+                        <h4 data-i18n="gallery.items.audi.title">Interior Door Panel Restoration</h4>
+                        <p data-i18n="gallery.items.audi.description">Deep cleaning and restoration of door panels</p>
                     </div>
                 </div>
             </div>
